add delete button to the displayed entries

--- a/public/style.css
+++ b/public/style.css
@@ -13,4 +13,16 @@ body {
     padding: 10px;
     margin-bottom: 15px;
   }
+
+  .delete-btn {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
   
+  .delete-btn:hover {
+    background-color: darkred;
+  }
